Fix : article alignement vertical avec region

--- a/src/scss/utilities/_gap.scss
+++ b/src/scss/utilities/_gap.scss
@@ -2,9 +2,9 @@
 // gap (margin)
 // ========================================
 
-.gap-top-2xl-3xl {
-	margin-top: var(--space-2xl-3xl);
-}
+// .gap-top-2xl-3xl {
+// 	margin-top: var(--space-2xl-3xl);
+// }
 
 .gap-top-xl {
 	margin-top: var(--space-xl);
